# swift-rp2350-lvgl

./: BridgingHeader.h  CMakeLists.txt  Main.swift  NOTICE  README.md  hacky_cmake_helper.cmake  hstx_spi_lcd.c  hstx_spi_lcd.h  lv_conf.h
.github/workflows/: check-sdk-updates.yml  cmake-PRtest-pico2ARM.yml  cmake-PRtests.yml  cmake-build&release-pico2ARM.yml  cmake-single-platform.yml
